# Ledger-MimbleWimble-Coin

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  Tests  ledger_app.toml  master.zip.1  mimblewimble coin.elf
.github/workflows/: build_and_tests.yml  ci-workflow.yml  continuous_integration.yml
docs/: apdu.md
docs/Epic Cash/: tutorial.md
docs/Grin/: tutorial.md
docs/MimbleWimble Coin/: tutorial.md
fuzzing/: CMakeLists.txt  fuzz_continue_decrypting_slate.c  fuzz_continue_encrypting_slate.c  fuzz_continue_transaction_apply_offset.c  fuzz_continue_transaction_get_message_signature.c  fuzz_continue_transaction_get_public_key.c  fuzz_continue_transaction_get_public_nonce.c  fuzz_continue_transaction_include_input.c  fuzz_continue_transaction_include_output.c  fuzz_finish_decrypting_slate.c  fuzz_finish_encrypting_slate.c  fuzz_finish_transaction.c  fuzz_get_address.c  fuzz_get_bulletproof_components.c  fuzz_get_commitment.c  fuzz_get_login_challenge_signature.c  fuzz_get_mqs_challenge_signature.c  fuzz_get_root_public_key.c  fuzz_get_seed_cookie.c  fuzz_start_decrypting_slate.c  fuzz_start_encrypting_slate.c  fuzz_start_transaction.c  fuzz_verify_address.c  fuzz_verify_root_public_key.c
fuzzing/simulate/: simulate.c
icons/: Ledger Manager Grin Icon.ai  Ledger Nano X MimbleWimble Coin Icon.ai  Ledger Stax Icon.ai
icons/Epic Cash/: Ledger Manager Icon.ai  Ledger Nano S Icon.ai  Ledger Nano S Plus Icon.ai  Ledger Stax Icon.ai
icons/Grin/: Ledger Manager Icon.ai  Ledger Nano X Icon.ai  Ledger Stax Icon.ai
icons/MimbleWimble Coin/: Ledger Manager Icon.ai
src/: age.c  age.h  base32.c  base32.h  base58.c  base58.h  bech32.c  bech32.h  blake2b.c  blake2b.h  chacha20_poly1305.c  chacha20_poly1305.h  common.c  common.h  continue_decrypting_mqs_data.c  continue_decrypting_mqs_data.h  continue_decrypting_slate.c  continue_decrypting_slate.h  continue_decrypting_slatepack_data.c  continue_decrypting_slatepack_data.h  continue_encrypting_mqs_data.c  continue_encrypting_mqs_data.h  continue_encrypting_slate.c  continue_encrypting_slatepack_data.c  continue_encrypting_slatepack_data.h  continue_transaction_apply_offset.c  continue_transaction_get_encrypted_secret_nonce.c  continue_transaction_get_encrypted_secret_nonce.h  continue_transaction_get_message_signature.c  continue_transaction_get_message_signature.h  continue_transaction_get_offset.c  continue_transaction_get_offset.h  continue_transaction_get_public_key.c  continue_transaction_get_public_key.h  continue_transaction_get_public_nonce.c  continue_transaction_include_input.c  continue_transaction_include_output.c  continue_transaction_include_output.h  continue_transaction_set_encrypted_secret_nonce.c  continue_transaction_set_encrypted_secret_nonce.h  (+107 more)
src/commands/: continue_decrypting_slate.c  continue_decrypting_slate.h  continue_encrypting_slate.c  continue_encrypting_slate.h  continue_transaction_apply_offset.c  continue_transaction_apply_offset.h  continue_transaction_get_message_signature.c  continue_transaction_get_message_signature.h  continue_transaction_get_public_key.c  continue_transaction_get_public_key.h  continue_transaction_get_public_nonce.c  continue_transaction_get_public_nonce.h  continue_transaction_include_input.c  continue_transaction_include_input.h  continue_transaction_include_output.c  continue_transaction_include_output.h  finish_decrypting_slate.c  finish_decrypting_slate.h  finish_encrypting_slate.c  finish_encrypting_slate.h  finish_transaction.c  finish_transaction.h  get_address.c  get_address.h  get_bulletproof_components.c  get_bulletproof_components.h  get_commitment.c  get_commitment.h  get_login_challenge_signature.c  get_login_challenge_signature.h  get_mqs_challenge_signature.c  get_mqs_challenge_signature.h  get_mqs_timestamp_signature.c  get_mqs_timestamp_signature.h  get_root_public_key.c  get_root_public_key.h  get_seed_cookie.c  get_seed_cookie.h  get_tor_certificate_signature.c  get_tor_certificate_signature.h  (+10 more)
submission_requirements/icons/: Ledger Nano S MimbleWimble Coin Icon.ai
submission_requirements/ui_flow/: UI Flow.psd
test/: BLAKE2b.min.js  ChaCha license.txt  Ed25519.min.js  LedgerJS-6.10.0.min.js  LedgerJS-6.11.2.min.js  common.min.js  consensus.min.js  index.html  mqs.min.js  proof_builder.min.js  secp256k1-zkp.min.js  seed.min.js  slate.min.js  slate_kernel.min.js  tor.min.js
test/functional_tests/: BLAKE2b-0.0.1.js  BLAKE2b-0.0.2.js  ChaCha-2.1.0.js  ChaCha-2.1.0.min.js  Ed25519-0.0.1.js  Ed25519-0.0.2.js  X25519-0.0.1.js  X25519-0.0.2.js  X25519-0.0.22.js  X25519-0.0.23.js  age.js  base58.js  base58.min.js  bignumber.js-9.0.2.min.js  common.js  consensus.js  crypto.js  hi-base32-0.5.1.js  identifier.js  identifier.min.js  js-sha256-0.9.0.js  main.js  mqs.js  mqs.min.js  new_proof_builder.js  proof_builder.js  proof_builder.min.js  secp256k1-zkp license.txt  secp256k1-zkp-0.0.1.js  secp256k1-zkp-0.0.2.js  secp256k1-zkp-0.0.25.js  secp256k1-zkp-0.0.27.js  secp256k1-zkp-0.0.28.js  secp256k1-zkp-0.0.3.js  secp256k1-zkp-0.0.4.js  secp256k1-zkp.min.js  seed.js  slate.js  slate.min.js  slate_kernel.js  (+5 more)
test/unit_tests/: CMakeLists.txt  test_base32.c  test_base58.c  test_chacha20_poly1305.c  test_common.c  test_slatepack.c  test_time.c
tests/: BLAKE2b.min.js  Ed25519.min.js  LedgerJS-6.20.0.min.js  LedgerJS-6.24.1.min.js  X25519.min.js  base58.min.js  bech32-2.0.0.min.js  common.min.js  consensus.min.js  crypto.min.js  identifier.min.js  index.html  mqs.min.js  new_proof_builder.min.js  proof_builder.min.js  secp256k1-zkp.min.js  seed.min.js  slate.min.js  slate_kernel.min.js  slatepack.min.js  tor.min.js
tests/functional_tests/: BLAKE2b.min.js  Ed25519-0.0.22.js  Ed25519.min.js  X25519.min.js  age.js  bech32-2.0.0.js  bech32-2.0.0.min.js  common.js  common.min.js  crypto.js  (+15 more)
tests/unit_tests/: CMakeLists.txt  cx.c  test_base32.c  test_base58.c  test_bech32.c  test_chacha20_poly1305.c  test_common.c  test_mqs.c  test_slatepack.c  test_time.c  test_tor.c
tests/unit_tests/simulate/: glyphs.h  simulate.c
tools/: generators.cpp  installer.html
(+28 files in other folders)
